# react-native-aistack

./: .gitignore  Aistack.podspec  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  nitro.json  package.json  tsconfig.build.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/: AistackPackage.kt
android/src/main/java/com/margelo/nitro/aistack/: Aistack.kt  ArrayConversions.kt  AssetFileResolver.kt  AudioClassifier.kt  BaseMediaPipeModule.kt  FaceDetector.kt  FaceLandmarker.kt  FaceStylizer.kt  GestureRecognizer.kt  HandLandmarker.kt  ImageClassifier.kt  ImageEmbedder.kt  ImageSegmenter.kt  InteractiveSegmenter.kt  LanguageDetector.kt  LlmInference.kt  LlmInferenceSession.kt  MediaPipeUtils.kt  ModelFileResolver.kt  ObjectDetector.kt  PoseLandmarker.kt  TextClassifier.kt  TextEmbedder.kt
docs/: package.json  tsconfig.json
example/: Gemfile  README.md  app.json  package.json  react-native.config.js
example/android/: link-assets-manifest.json  settings.gradle
example/ios/: Podfile
example/src/: App.tsx  navigation.ts
ios/: Aistack.swift  ModelFileResolver.swift  TextClassifier.swift
src/: index.tsx  types.ts
src/common/: api-wrappers.ts  errors.ts  internal-types.ts  result-converters.ts  types.ts
src/hooks/: internal.ts  useAudioClassifier.ts  useFaceDetector.ts  useFaceLandmarker.ts  useFaceStylizer.ts  useGestureRecognizer.ts  useHandLandmarker.ts  (+10 more)
(+79 files in other folders)
